fixed main section overlay not showing

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -73,7 +73,7 @@
 
 /*Values for calc function*/
 $second-layer-left: -5%;
-$second-layer-top: 1%;
+$second-layer-top: .3rem;
 
 $border-top-left-radius: 4rem;
 
